[package]
name = "furiosa-dummy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "furiosa_dummy"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "furiosa.dummy.furiosa_dummy"

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
